# hunk

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  justfile
.cargo/: config.toml
crates/hunk-codex/: Cargo.toml
crates/hunk-codex/src/: api.rs  diff_stats.rs  errors.rs  host.rs  lib.rs  rpc.rs  state.rs  threads.rs  ws_client.rs
crates/hunk-codex/src/threads/: helpers.rs  notifications.rs
crates/hunk-codex/tests/: host_runtime.rs  protocol_schema_smoke.rs  request_id_and_correlation.rs  rpc_session.rs  state_reducer.rs  state_turn_stream.rs  thread_service.rs  thread_service_snapshot_reconciliation.rs  windows_cwd_normalization.rs  windows_thread_list_compat.rs
docs/: AI_CODEX_SPEC.md  AI_CODEX_WEBSOCKET_TODO.md  AI_INLINE_DIFF_IMPLEMENTATION_PLAN.md  AI_TERMINAL_SUPPORT_PLAN.md  AI_TIMELINE_WORKSPACE_SURFACE_PLAN.md  DIFF_VIEWER_IMPLEMENTATION_PLAN.md  FILES_HELIX_EDITOR_IMPLEMENTATION_PLAN.md  FILES_REVIEW_EDITOR_UNIFICATION_PLAN.md  GHOSTTY_TERMINAL_MIGRATION_IMPLEMENTATION_PLAN.md  JJ_GRAPH_WORKSPACES_TODO.md  Lessons Learned.md  OTA_UPDATE_DEPLOYMENT.md  OTA_UPDATE_IMPLEMENTATION_PLAN.md  ZED_EDITOR_ARCHITECTURE_PORT_TODO.md  ZED_EDITOR_PORT_PLAN.md
flatpak/: io.github.BlixtWallet.Hunk.yaml
scripts/: build_linux.sh  build_macos_icon.sh  build_windows.sh  build_windows_icon.sh  download_codex_runtime_unix.sh  linux_gui_binary_launcher.sh  linux_release_common.sh  package_linux_release.sh  package_macos_release.sh  package_windows_release.ps1  resolve_cargo_target_dir.ps1  run_flatpak.sh  run_linux_dev.sh  smoke_test_linux_system_package.sh  (+1 more)
(+212 files in other folders)
