[package]
name = "hunk-codex"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
url = "2.5"
tungstenite = "0.28"
codex-app-server-protocol = { git = "https://github.com/openai/codex.git", rev = "6bee02a346d0aa8dc4d5dcb312545fa37408b6ca" }

[dev-dependencies]
tempfile = "3.23"
